--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
   <meta property="og:url" content="URL OF THE WEBSITE"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <!-- <meta property="og:image" content="static/images/carousel2.jpg" />
+  <!-- <meta property="og:image" content="static/images/1.jpg" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/> --> 
 
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> --> 
 
 
-  <title>EHRAgent</title>
+  <title>MLE-Dojo</title>
   <link rel="icon" type="image/x-icon" href="static/images/1.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
