--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/cartoon.png" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHRAgent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/1.jpg" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHRAgent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
