--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>MLE-Dojo</title>
-  <link rel="icon" type="image/x-icon" href="static/images/1.jpg">
+  <link rel="icon" type="image/x-icon" href="static/images/2.jpg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -52,7 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/1.jpg" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />EHRAgent<br><span style="font-size: 0.8em; font-weight: normal;"> Code Empowers Large Language Models for Few-shot Complex Tabular Reasoning on Electronic Health Records</span></h1>
+            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/2.jpg" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;"> mproving LLM Agents for Machine
+Learning Engineering in Interactive Environments</span></h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -147,7 +148,7 @@
         <!-- Your video here -->
         <img src="static/images/EHRAgent-video.gif" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        EHRAgent is an autonomous LLM agent with external tools and code interface for improved multi-tabular reasoning across EHRs.       </h2>
+        MLE-Dojo, a Gym-style framework for systematically training, evaluating, and improving autonomous large language model (LLM) agents in iterative machine learning engineering (MLE) workflows.</h2>
     </div>
   </div>
 </section>
