--- a/index.html
+++ b/index.html
@@ -52,9 +52,17 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold;"><img src="static/images/2.jpg" alt="Alt text" style="height: 1.5em; vertical-align: middle;" />MLE-Dojo<br><span style="font-size: 0.8em; font-weight: normal;"> Improving LLM Agents for Machine
-Learning Engineering in Interactive Environments</span></h1>
-            <div class="is-size-5 publication-authors">
+<h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold; text-align: center;">
+  MLE-Dojo
+  <br />
+  <img src="static/images/2.jpg" alt="Alt text" 
+       style="width: 6em; height: 1.3em; margin-top: 0.3em; object-fit: contain;" />
+  <br />
+  <span style="font-size: 0.8em; font-weight: normal;">
+    Improving LLM Agents for Machine Learning Engineering in Interactive Environments
+  </span>
+</h1>
+<div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
                 <a href="https://wshi83.github.io/" target="_blank">Wenqi Shi</a><sup>1*</sup>,</span>
