--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <h1 class="title is-1 publication-title" style="font-size: 2.9em; font-weight: bold; text-align: center;">
   MLE-Dojo
   <br />
-  <img src="static/images/2.jpg" alt="Alt text" 
+  <img src="static/images/wide.jpg" alt="Alt text" 
        style="width: 6em; height: 1.3em; margin-top: 0.3em; object-fit: contain;" />
   <br />
   <span style="font-size: 0.8em; font-weight: normal;">
